<resources>
    <string name="noTasksMessage">No tasks to show here!</string>
    <string name="goodbyeMessage">Bye there!</string>
    <string name="helloToUser">Hello %1$s!</string>
    <string name="goodbyeToUser">Goodbye %1$s!</string>
    <string name="app_name">TaskMate</string>
    <string name="click">Click</string>
    <string name="titleInputHint">Enter title…</string>
    <string name="descriptionInputHint">Enter description…</string>
    <string name="btnClick">Button Clicked!</string>
    <string name="btnGreetingClick">Greeting…</string>
    <string name="btnByeingClick">Byeing…</string>
    <string name="resetBtnTxt">Reset Everything!</string>
    <string name="welcomeText">Welcome Dude!</string>
    <string name="welcomeToUser">Welcome to the world of android %1$s!</string>
    <string name="nextPage">Next Page</string>
    <string name="previousPage">Previous Page</string>
    <string name="githubLogoContentDesc">Github Logo</string>
    <string name="author">Author: Amirhossein Gholizadeh</string>
    <string name="projectName">App name: Focus Mate</string>
    <string name="github">Github: Amirhossein77–98</string>
    <string name="instagram">Instagram: dailyskillseeker</string>
    <string name="telegram">Telegram: amirsteinbeck</string>
    <string name="titlePlaceholder">Title</string>
    <string name="descriptionPlaceholder">Description</string>
    <string name="save">Save</string>
    <string name="titleTitle">Title:</string>
    <string name="descTitle">Description: </string>
    <string name="newTask">New Task</string>
    <string name="taskEntrance">Enter your task…</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="unarchive">Unarchive</string>
    <string name="removeSnackbarMessage">Removed %1$s…</string>
    <string name="archiveSnackbarMessage">Archived %1$s…</string>
    <string name="unarchiveSnackbarMessage">Unarchived %1$s…</string>
    <string name="undo">Undo</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dateAdded">Date Added: %1$s</string>
    <string name="timeAdded">Time Added: %1$s</string>
    <string name="todayTimestamp">Today at %1$s</string>
    <string name="yesterdayTimestamp">Yesterday at %1$s</string>
    <string name="thisWeekTimestampt">This week</string>
    <string name="oldTasksTimestamp">Old task from %1$s</string>
    <string name="mainPage">Main Page</string>
    <string name="settings">Settings</string>
    <string name="archivedTasks">Archived Tasks</string>
    <string name="credentials">Credentials</string>
    <string name="autoSortTasks">Auto-sort Tasks</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="language">Language</string>
    <string name="nightMode">Night Mode</string>
    <string name="dueDate">Due Date:</string>
    <string name="datePicker">Pick a due date</string>
    <string name="dateDemanderTitle">Please select a date</string>
    <string name="timeDemanderTitle">Please select a time</string>
    <string name="taskSubmissionDatePlaceHolder">Submission Time</string>
    <string name="taskDueDatePlaceHolder">Due Time</string>
    <string name="taskAddedTimeTemplate">Added: %1$s</string>
    <string name="taskDueTimeTemplate">Due: %1$s at %2$s</string>
    <string name="taskDescTemplate">Description: %1$s</string>
    <string name="DateTimePickerBtnTemplate">%1$s/%2$s/%3$s at %4$s:%5$s</string>
</resources>