<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CredentialsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/mainPage"
        android:textSize="12dp"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        app:icon="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credentials"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credentialBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/githubLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/githubLogoContentDesc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projectName"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/githubLogo"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="14sp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName"/>

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:textSize="14sp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author"/>

        <TextView
            android:id="@+id/instagramId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:textSize="14sp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/github"/>

        <TextView
            android:id="@+id/telegramId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telegram"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instagramId"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>