<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/mainPage"
            android:textSize="12dp"
            app:icon="@drawable/baseline_arrow_back_24"
            app:backgroundTint="#00000000"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/activityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/settingsContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"> 
        
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dayNightModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nightMode"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/autoSortSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoSortTasks"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/languageSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>
    
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>