<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArchivedTasksActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/mainPage"
        android:textSize="12dp"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        app:icon="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archivedTasks"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/emptyTasksView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noTasksMessage"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="@id/recyclerView"
        app:layout_constraintTop_toTopOf="@id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>