<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topRowButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            app:strokeWidth="1dp"
            app:strokeColor="@color/design_default_color_surface"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            app:icon="@drawable/settings_svgrepo_com"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/leftPageButtonNavigator" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rightPageButtonNavigator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/blueGreen"
            app:strokeWidth="1dp"
            app:strokeColor="@color/design_default_color_surface"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            app:icon="@drawable/archive_minimalistic_svgrepo_com"
            app:iconTint="@color/white"
            app:iconGravity="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leftPageButtonNavigator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorOnTertiaryFixed"
            android:layout_marginEnd="10dp"
            android:paddingEnd="10dp"
            android:text="@string/app_name"
            app:strokeWidth="1dp"
            app:strokeColor="@color/design_default_color_surface"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            app:icon="@drawable/info_circle_svgrepo_com"
            app:iconTint="@color/white"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/emptyTasksView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noTasksMessage"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="@id/recyclerView"
        app:layout_constraintTop_toTopOf="@id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomRow"
        app:layout_constraintTop_toBottomOf="@id/topRowButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username, name"
            android:hint="@string/taskEntrance"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="24dp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:longClickable="false"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:icon="@drawable/plus_svgrepo_com"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="@id/taskInputLayout"
            app:layout_constraintTop_toTopOf="@id/taskInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>